css/screen.css
/* ... */
.apps img {
  width: 470px;
}

.apps h3 {
margin-bottom: 10px;
}

.companies {
  background-color: #fff;
  color: #000;
  text-shadow: none;
  float: left;
  margin-top: 20px;
  height: 380px;
}

.companies img {
  width: 300px;
  height: 200px;
  float: left;
  padding: 60px 60px 20px;
}

.companies .companyblurb {
  float:left;
  width: 370px;
  padding: 40px 60px 0 0;
}

.companies h5 {
  text-transform: uppercase;
  font-weight: 700;
  font-style: normal;
}

.companies p {
  font-size: 16px;
  line-height: 22px;
}

.companies a {
  color: #000;
}

.carousel {
  position: relative;
  margin-bottom: 20px;
  line-height: 1;
}

.apps .carousel-inner {
  margin-left: 0px;
}

.carousel-inner {
  position: relative;
  overflow: hidden;
  margin-left: 60px;
}

.market .carousel-inner {
  max-width: 860px;
}

.carousel-inner > .item {
  position: relative;
  display: none;
  -webkit-transition: 0.6s ease-in-out left;
     -moz-transition: 0.6s ease-in-out left;
       -o-transition: 0.6s ease-in-out left;
          transition: 0.6s ease-in-out left;
}

.carousel-inner > .item > img,
.carousel-inner > .item > a > img {
  display: block;
  line-height: 1;
}

.carousel-inner > .active,
.carousel-inner > .next,
.carousel-inner > .prev {
  display: block;
}

.carousel-inner > .active {
  left: 0;
}

.carousel-inner > .next,
.carousel-inner > .prev {
  position: absolute;
  top: 0;
  width: 100%;
}

.carousel-inner > .next {
  left: 100%;
}

.carousel-inner > .prev {
  left: -100%;
}

.carousel-inner > .next.left,
.carousel-inner > .prev.right {
  left: 0;
}

.carousel-inner > .active.left {
  left: -100%;
}

.carousel-inner > .active.right {
  left: 100%;
}

.carousel-control {
  position: absolute;
  top: 40%;
  left: 0px;
  width: 40px;
  height: 40px;
  font-size: 60px;
  font-weight: 100;
  line-height: 30px;
  color: #ffffff;
  text-align: center;
  border: 3px solid #ffffff;
  -webkit-border-radius: 23px;
     -moz-border-radius: 23px;
          border-radius: 23px;
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.carousel-control.right {
  left: 939px;
}

.apps .carousel-control {
  position: absolute;
  top: 40%;
  left: 8px;
  width: 40px;
  height: 40px;
  font-size: 60px;
  font-weight: 100;
  line-height: 30px;
  color: #ffffff;
  text-align: center;
  border: 3px solid #ffffff;
  -webkit-border-radius: 23px;
     -moz-border-radius: 23px;
          border-radius: 23px;
  opacity: 0.5;
  filter: alpha(opacity=50);
}

.apps .carousel-control.right {
  left: 400px;
}

.carousel-control:hover,
.carousel-control:focus {
  color: #ffffff;
  text-decoration: none;
  opacity: 0.9;
  filter: alpha(opacity=90);
  border-bottom: 3px solid #ffffff;
}

.carousel-indicators {
  position: absolute;
  top: 15px;
  right: 15px;
  z-index: 5;
  margin: 0;
  list-style: none;
}

.carousel-indicators li {
  display: block;
  float: left;
  width: 10px;
  height: 10px;
  margin-left: 5px;
  text-indent: -999px;
  background-color: #ccc;
  background-color: rgba(255, 255, 255, 0.25);
  border-radius: 5px;
}

.carousel-indicators .active {
  background-color: #fff;
}

.jeff,
.andrew,
.bret,
.burt,
.chip,
.chris,
.chriswhit,
.dave,
.emma,
.harlan,
.jason,
.jeff,
.jon,
.kevin,
.michelle,
.steve {
  background-image: url('../img/brigade_captains.jpg');
  background-size: 100px;
  float: left;
  width: 100px;
  height: 100px;
  margin: 20px 20px 0 0;
}

.jeff {
  background-position: 0 -100px;
}

.andrew {
  background-position: 0 -200px;
}

.bret {
  background-position: 0 -300px;
}

.burt {
  background-position: 0 -400px;
}

.chip {
  background-position: 0 -500px;
}

.chris {
  background-position: 0 -600px;
}

.chriswhit {
  background-position: 0 -700px;
}

.emma {
  background-position: 0 -800px;
}

.harlan {
  background-position: 0 -900px;
}

.jason {
  background-position: 0 -1000px;
}

.jeff {
  background-position: 0 -1100px;
}

.jon {
  background-position: 0 -1200px;
}

.kevin {
  background-position: 0 -1300px;
}

.michelle {
  background-position: 0 -1400px;
}

.steve {
  background-position: 0 -1500px;
}




.network .bios p {
  font-size: 24px;
  font-weight: 700;
}

.network .bios h3 {
  font-size: 26px;
}

.network .bios h5 {
  font-size: 21px;
}

.getinvolved .press {
  text-align: left;
}

.getinvolved .cnn {
  background-image:url('../img/cnn.png');
  background-size: 86px;
  height: 40px;
  width: 86px;
}

.getinvolved .mashable {
  background-image:url('../img/mashable.png');
  background-size: 123px;
  width: 123px;
  height: 40px;
}

.getinvolved .motherjones {
  background-image:url('../img/motherjones.png');
  background-size: 139px;
  width: 139px;
  height: 40px;
}

.getinvolved .npr {
  background-image:url('../img/npr_logo_line.png');
  background-size: 110px;
  height: 40px;
  width: 110px;
}

.getinvolved .wsj {
  background-image:url('../img/wsj.png');
  background-size: 226.5px;
  width: 226.5px;
  height: 40px;
}

.getinvolved .wp {
  background-image:url('../img/wp.png');
  background-size: 207px;
  width: 207px;
  height: 40px;
}

.getinvolved .cnn:hover,
.getinvolved .mashable:hover,
.getinvolved .motherjones:hover,
.getinvolved .npr:hover,
.getinvolved .wsj:hover,
.getinvolved .wp:hover {
  background-position: 0 -40px;
}

.getinvolved .press div  {
  margin-right: 20px;
  float: left;
}

